[gd_scene load_steps=11 format=3 uid="uid://cfm1g0c2lt806"]

[ext_resource type="Script" uid="uid://dlbrtbpmsfujf" path="res://world.gd" id="1_aqk2v"]
[ext_resource type="PackedScene" uid="uid://cleasu8qoohko" path="res://characters/player.tscn" id="1_f3sb7"]
[ext_resource type="Texture2D" uid="uid://dl5pmj3xjvpde" path="res://assets/pixel-art-street-test.jpg" id="1_tlwt5"]
[ext_resource type="PackedScene" uid="uid://csw4bw3qe8a6s" path="res://characters/enemy.tscn" id="2_036b0"]
[ext_resource type="PackedScene" uid="uid://boabdmx1vydgf" path="res://components/weapons/Bullet.tscn" id="3_aqk2v"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dwbse"]
size = Vector2(192, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aqk2v"]
resource_local_to_scene = true
size = Vector2(192, 8.00035)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tlwt5"]
size = Vector2(177, 6.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_036b0"]
size = Vector2(176, 8)

[sub_resource type="Curve2D" id="Curve2D_tlwt5"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 352, 0, 0, 0, 0, 0, 352, 192, 0, 0, 0, 0, 0, 192, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 352, 0)
}
point_count = 5

[node name="World" type="Node2D"]
script = ExtResource("1_aqk2v")
zombie_scene = ExtResource("2_036b0")

[node name="Pixel-art-street-test" type="Sprite2D" parent="."]
modulate = Color(0.3, 0.3, 0.3, 1)
z_index = -1
position = Vector2(176.238, 96)
scale = Vector2(0.325484, 0.315789)
texture = ExtResource("1_tlwt5")

[node name="Walls" type="Node2D" parent="."]

[node name="VerticalWalls" type="StaticBody2D" parent="Walls"]

[node name="LeftWall" type="CollisionShape2D" parent="Walls/VerticalWalls"]
position = Vector2(4, 96)
rotation = 1.5708
shape = SubResource("RectangleShape2D_dwbse")

[node name="RightWall" type="CollisionShape2D" parent="Walls/VerticalWalls"]
position = Vector2(348, 96)
rotation = 1.5708
shape = SubResource("RectangleShape2D_aqk2v")

[node name="UpWall" type="CollisionShape2D" parent="Walls/VerticalWalls"]
position = Vector2(175.996, 3.25)
rotation = 0.00109187
scale = Vector2(2, 1)
shape = SubResource("RectangleShape2D_tlwt5")

[node name="DownWall" type="CollisionShape2D" parent="Walls/VerticalWalls"]
position = Vector2(176, 188)
scale = Vector2(2, 1)
shape = SubResource("RectangleShape2D_036b0")

[node name="HorizontalWalls" type="StaticBody2D" parent="Walls"]

[node name="ActorsContainer" type="Node2D" parent="."]

[node name="Player" parent="ActorsContainer" instance=ExtResource("1_f3sb7")]
position = Vector2(184, 128)
BULLET = ExtResource("3_aqk2v")

[node name="SpawnPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_tlwt5")

[node name="SpawnPathLocation" type="PathFollow2D" parent="SpawnPath"]
position = Vector2(352, 0)
rotation = 1.5708

[node name="ZombieTimer" type="Timer" parent="."]
autostart = true
